--- a/cordova/hello/www/css/index.css
+++ b/cordova/hello/www/css/index.css
@@ -24,22 +24,22 @@ body {
     -webkit-touch-callout: none;                /* prevent callout to copy image, etc when tap to hold */
     -webkit-text-size-adjust: none;             /* prevent webkit from resizing text to fit */
     -webkit-user-select: none;                  /* prevent copy paste, to allow, change 'none' to 'text' */
-    background-color:#E4E4E4;
-    background-image:linear-gradient(top, #A7A7A7 0%, #E4E4E4 51%);
+    /* background-color:#E4E4E4; */
+    /* background-image:linear-gradient(top, #A7A7A7 0%, #E4E4E4 51%); */
     font-family: system-ui, -apple-system, -apple-system-font, 'Segoe UI', 'Roboto', sans-serif;
     font-size:12px;
-    height:100vh;
+    /* height:100vh; */
     margin:0px;
     padding:0px;
     /* Padding to avoid the "unsafe" areas behind notches in the screen */
     padding: env(safe-area-inset-top, 0px) env(safe-area-inset-right, 0px) env(safe-area-inset-bottom, 0px) env(safe-area-inset-right, 0px);
-    text-transform:uppercase;
+    /* text-transform:uppercase; */
     width:100%;
 }
 
 /* Portrait layout (default) */
 .app {
-    background:url(../img/logo.png) no-repeat center top; /* 170px x 200px */
+    /* background:url(../img/logo.png) no-repeat center top;  */
     position:absolute;             /* position in the center of the screen */
     left:50%;
     top:50%;
@@ -104,4 +104,15 @@ h1 {
 .blink {
     animation:fade 3000ms infinite;
     -webkit-animation:fade 3000ms infinite;
+}
+
+.button {
+    border: 1px solid #999;
+    padding: 10px;
+    margin: 5px;
+}
+.box {
+    border: 1px solid #999;
+    padding: 10px;
+    margin: 5px;
 }
